Revision history for Dist::Zilla::PluginBundle::YANICK

{{$NEXT}} 
 [API CHANGES]

 [BUG FIXES]

 [ENHANCEMENTS]

0.2.1 2011-04-10 
 [BUG FIXES]
 - NextSemanticVersion afterRelease actions work, now.

0.2.0 2011-04-10
 [ENHANCEMENTS]
 - Add the NextSemanticVersion plugin
 - Add ReadmeMarkdownFromPod
 - Add parameter 'fake_release'

0.1.0 2011-01-02
 - Add parameter 'autoprereqs_skip'.
 - Add plugin InstallRelease
 - Add plugin Authority

0.0.1 2010-12-21
 - First release on an unsuspecting world.
