@@ -8,4 +8,3 @@ copyright_year   = 2010
 Dist::Zilla::Plugin::ReadmeMarkdownFromPod = 0
 
 [@YANICK]
-
