@@ -6,6 +6,7 @@ Revision history for Dist::Zilla::PluginBundle::YANICK
  [BUG FIXES]
 
  [ENHANCEMENTS]
+ - Add parameter 'authority'
 
 0.2.1 2011-04-10 
  [BUG FIXES]
